<!--
  ~ Copyright (C) 2016 wanghong
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~       http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">DYTT</string>
    <string name="action_settings">Settings</string>
    <string name="category_recently_update">Recently Updates</string>
    <string name="category_tv_drama_chinese">Chinese TV Drama</string>
    <string name="category_tv_drama_western">Western TV Drama</string>
    <string name="category_tv_drama_japan_korea">Japan/Korea TV Drama</string>
    <string name="copy_to_clipboard">Copy to clipboard</string>
    <string name="go_to_thunder">Download with Thunder mobile</string>
    <string name="prompt_thunder_not_installed">Thunder not installed</string>
    <string name="action_install">Install</string>
    <string name="prompt_any_suggestion">Any suggestion?\n\nContact me: wh.lin63@gmail.com</string>
    <string name="copy_to_clipboard_successfully">Copied to clipboard</string>
    <string name="app_store_not_installed">Application store not found</string>
    <string name="install_thunder_from_browser">Install Thunder via browser</string>
    <string name="category_imdb_top_250_movie">IMDB Top 250</string>
    <string name="metascore">Metascore</string>
    <string name="director">Director</string>
    <string name="actors">Actors</string>
    <string name="writer">Writer</string>
    <string name="release">Release</string>
    <string name="country">Country</string>
    <string name="imdb_com">IMDB.com</string>
    <string name="prompt_starting_imdb">Starting IMDB…</string>
    <string name="cancel">Cancel</string>
    <string name="download_list">Download List</string>
    <string name="share">Share</string>
    <string name="prompt_send_to">Send to</string>
</resources>
