<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2017 wanghong
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~       http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_imdbdetail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.wanghong.dytt.imdb.IMDBDetailActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/imdb_detail_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imdb_detail_poster"
                android:layout_width="300dp"
                android:layout_height="475dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/list_item_padding"
                android:layout_marginTop="@dimen/list_item_padding"
                android:contentDescription="@string/app_name" />

            <TextView
                android:id="@+id/imdb_detail_plot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/list_item_padding" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/imdb_detail_rated"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/imdb_detail_genre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/item_spacing"
                    android:layout_marginRight="@dimen/item_spacing"
                    android:layout_toEndOf="@+id/imdb_detail_rated"
                    android:layout_toLeftOf="@+id/imdb_detail_runtime"
                    android:layout_toRightOf="@+id/imdb_detail_rated"
                    android:layout_toStartOf="@+id/imdb_detail_runtime"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/imdb_detail_runtime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:textSize="12sp" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/list_item_padding"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/imdb_detail_metascore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/ic_metascore_bg"
                    android:gravity="center"
                    android:textColor="@android:color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/item_spacing"
                    android:layout_marginStart="@dimen/item_spacing"
                    android:text="@string/metascore" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_gravity="center_vertical"
                        android:background="@drawable/ic_star_rate_tint"
                        android:contentDescription="@string/app_name" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/imdb_detail_rating"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:gravity="center"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/imdb_detail_votes"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:gravity="center"
                            android:textSize="12sp" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <com.wanghong.dytt.imdb.IMDBLabelTextView
                android:id="@+id/imdb_detail_director"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:label="@string/director" />

            <com.wanghong.dytt.imdb.IMDBLabelTextView
                android:id="@+id/imdb_detail_actors"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:label="@string/actors" />

            <com.wanghong.dytt.imdb.IMDBLabelTextView
                android:id="@+id/imdb_detail_writer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:label="@string/writer" />

            <com.wanghong.dytt.imdb.IMDBLabelTextView
                android:id="@+id/imdb_detail_release"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:label="@string/release">

            </com.wanghong.dytt.imdb.IMDBLabelTextView>

            <com.wanghong.dytt.imdb.IMDBLabelTextView
                android:id="@+id/imdb_detail_country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:label="@string/country" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/item_spacing"
                android:layout_marginTop="@dimen/item_spacing">

                <TextView
                    android:id="@+id/imdb_detail_see_more_imdb_com"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:autoLink="web"
                    android:linksClickable="false"
                    android:text="@string/imdb_com"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/imdb_detail_see_more_imdb_app"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:background="@drawable/ic_imdb" />

            </LinearLayout>

            <Button
                android:id="@+id/imdb_detail_go_to_thunder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_go_to_thunder"
                android:text="@string/go_to_thunder"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/imdb_detail_progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminate="true"
        android:visibility="gone" />
</RelativeLayout>
